Revert unused clock